<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="addProductViewModel"
            type="com.example.libraryapp.ui.addProductFragment.AddProductViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/books"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_2"
            android:background="@color/transparent_bg"
            android:paddingHorizontal="@dimen/grid_2"
            android:paddingVertical="@dimen/margin_padding_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:gravity="center_horizontal"
                android:text="@string/add_product"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/vMain" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeading">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/product_name"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:text="@={addProductViewModel.productName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductDesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/grid_2"
                app:boxStrokeWidth="0dp"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="top"
                    android:hint="@string/product_description"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:text="@={addProductViewModel.productDesc}"
                    android:textAlignment="gravity" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductDesc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/product_qty"
                    android:inputType="number"
                    android:maxLength="4"
                    android:text="@={addProductViewModel.productQty}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:errorTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:errorTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductQty">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/product_price"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={addProductViewModel.productPrice}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:onClick="@{clickListener}"
                android:paddingVertical="@dimen/grid_2"
                android:text="@string/save"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilProductPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>