<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="landingViewModel"
            type="com.example.libraryapp.ui.landingFragment.LandingViewModel" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.landingFragment.LandingFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/books"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/grid_2"
            android:background="@color/transparent_bg"
            android:paddingHorizontal="@dimen/grid_2"
            android:paddingVertical="@dimen/margin_padding_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_padding_20"
                android:text="@string/welcome_to_mobile_book_store"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btnAddBook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:onClick="@{clickListener}"
                android:text="@string/add_books"
                app:layout_constraintBottom_toTopOf="@id/btnShowBooks"
                app:layout_constraintEnd_toEndOf="@id/tvHeading"
                app:layout_constraintStart_toStartOf="@id/tvHeading"
                app:layout_constraintTop_toBottomOf="@id/tvHeading" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                android:onClick="@{clickListener}"
                android:text="@string/book_shelf"
                app:layout_constraintEnd_toEndOf="@id/btnAddBook"
                app:layout_constraintStart_toStartOf="@id/btnAddBook"
                app:layout_constraintTop_toBottomOf="@id/btnAddBook" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>